# pyxelext

./: LICENSE  README.md  requirements.txt  setup.cfg
pyxelext/: __init__.py  input.py  line.py  physics.py  system.py  text.py
pyxelext/examples/: 1_draw_aline.py  2_length_line.py  3_poly.py  4_getkey.py  5_text.py  6_static_rect.py  7_system.py
