[metadata]
name = pyxelext
version = attr: pyxelext.VERSION
description-file = README.md
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    pyxel >= 1.4.3

[options.extras_require]
physics = pymunk
images = pillow

[options.package_data]
* = *.txt, *.rst, *.md

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
